--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,12 @@
 //Bulma vue module
 @import 'node_modules/buefy/src/scss/buefy';
 
+//Custom SASS pages
+@import "overides";
+@import "helpers";
+@import "manage";
+@import "styles";
+
 //.navbar-laravel {
 //  background-color: #fff;
 //  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
